[package]
name = "zetra-openshell"
version = "0.1.0"
edition = "2021"
description = "Behavioral security layer for NVIDIA OpenShell"
license = "Apache-2.0"
repository = "https://github.com/chipsolverzetra/zetra-openshell"
readme = "README.md"
keywords = ["security", "ai-agents", "openshell", "ocsf", "behavioral-analysis"]

[[bin]]
name = "zetra"
path = "src/main.rs"

[lib]
name = "zetra_openshell"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
